--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker
-        uses: Dockerfile@v1
+        uses: resume/@v1
 
       - name: Build Docker image
         run: docker build --tag my_tag -f Dockerfile .
