--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,7 +19,7 @@ jobs:
         path: ./main.pdf
 
     - name: Push output file to pdf-output branch
-      uses: ad-m/github-push-action@master
+      uses: actions/main@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: pdf-output
