--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,7 +19,8 @@ jobs:
         path: ./main.pdf
 
     - name: Push output file to resume branch
-      uses: actions/main@master
+      uses: ad-m/github-push-action@master
+
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: resume
