--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,7 +23,7 @@ jobs:
 
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: resume
+        branch: resume/
         directory: ./
     - name: Download repository changes
       uses: actions/checkout@v2
