--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,6 +12,24 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Clear old PDF file if exists
+      run: |
+        rm -f resume_*.pdf
+
+    - name: Create unique PDF file name
+      run: |
+        printf -v date '%(%Y-%m-%d-%H%M%S)T' -1
+        PDF_FILE_NAME="resume_${date}.pdf"
+
+    - name: Rename PDF file
+      run: mv main.pdf $PDF_FILE_NAME
+
+    - name: Publish PDF to Github
+      uses: actions/upload-artifact@v2
+      with:
+        name: $PDF_FILE_NAME
+        path: ./$PDF_FILE_NAME
+
     - name: Push output file to resume branch
       uses: ad-m/github-push-action@master
       with:
