--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,7 +17,11 @@ jobs:
       with:
         name: main.pdf
         path: ./main.pdf
-
+        
+    - name: Pull
+      run: |
+        git pull
+        
     - name: Push output file to resume branch
       uses: ad-m/github-push-action@master
 
