--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Pull
       run: |
         git config pull.rebase false
-        git pull origin resume
+        git merge origin/master
         
     - name: Push output file to resume branch
       uses: ad-m/github-push-action@master
