--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,6 +22,11 @@ jobs:
         git config pull.rebase false
         git pull origin main
         
+    - name: Publish PDF to Github
+      uses: actions/upload-artifact@v2
+      with:
+        name: main.pdf
+        path: ./main.pdf
     - name: Push output file to resume branch
       uses: ad-m/github-push-action@master
 
